01-traefik-vpn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: consul
    k8s.kuboard.cn/workload: consul
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
  - host: consul.internal-devops.development.npool.top
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-ui
          servicePort: http
