02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: consul
    k8s.kuboard.cn/workload: consul
    nginx.org/websocket-services: "consul"
    nginx.com/sticky-cookie-services: "serviceName=consul srv_id expires=1h path=/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
spec:
  rules:
  - host: consul.internal-devops.development.npool.top
    http:
      paths:
      - path: /
        backend:
          serviceName: consul
          servicePort: http
